removed "Skip" from Owner tab (since the form setting controlling whether this wizard step appears is called "Require Owner"- there is no case where Owner would be shown and skippable) Files modified - [NewForm.html]

--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -236,7 +236,7 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-wizardstep>
-                            <wm-wizardstep name="wizardstep9" title="Owner" ng-if="loaded &amp;&amp; ownerInfo" on-load="wizardstep9Load($scope, stepIndex)" enableskip="true">
+                            <wm-wizardstep name="wizardstep9" title="Owner" ng-if="loaded &amp;&amp; ownerInfo" on-load="wizardstep9Load($scope, stepIndex)" enableskip="false">
                                 <wm-layoutgrid name="layoutgrid14_1">
                                     <wm-gridrow name="gridrow50" padding="2em unset unset unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn93_2">
